--- a/src/inbox.html
+++ b/src/inbox.html
@@ -49,7 +49,7 @@ title: Входящие
 
             <div class="inbox-filter">
                 <div class="inbox-filter__check">
-                    <label class="checkbox">
+                    <label class="checkbox" data-all-checked=".all1-checked">
                         <input type="checkbox" class="checkbox__inp">
                         <span class="checkbox__frame"></span>
                         <span class="checkbox__label">Выделить все</span>
@@ -65,9 +65,9 @@ title: Входящие
             </div>
         </div>
 
-        <div class="flex-main">
-            <div class="inbox">
-                <div class="inbox-list">
+        <div class="flex-main _mt-10">
+            <div class="inbox _mt--10">
+                <div class="inbox-list all1-checked">
                     <table class="inbox-table">
                         <tbody>
                             <tr class='clickable-row' data-href="#">
