create confirm popup

--- a/src/nav.html
+++ b/src/nav.html
@@ -38,4 +38,9 @@ title: Админ панель
             javascript:notify('error','Ой, что-то пошло не так, какая-то ошибка, попробуйте позже');
         ">Danger confirm</a>
     </li>
+    <li>
+        <a href="
+            javascript:confirmNoty.show();
+        ">Confirm</a>
+    </li>
 </ul>
